feat: created the first reset password component and added styles

--- a/src/assets/styles/authentication/Login.scss
+++ b/src/assets/styles/authentication/Login.scss
@@ -48,6 +48,8 @@
                     color: #0085FF;
                     cursor: pointer;
                     font-family: 'Poppins';
+                    font-size: 16px;
+                    font-weight: 400;
                     &:hover{
                         background: #59AFFF;
                         color: #FFFFFF;
@@ -62,6 +64,8 @@
                     color: #FFFFFF;
                     cursor: pointer;
                     font-family: 'Poppins';
+                    font-size: 16px;
+                    font-weight: 600;
                     &:hover{
                         background: #59AFFF;
                     }
