--- a/src/assets/styles/authentication/AuthHero.scss
+++ b/src/assets/styles/authentication/AuthHero.scss
@@ -4,5 +4,8 @@
     align-items: center;
     min-height: 100vh;
     width: 50%;
-    background-color: yellow;
+    //background-color: yellow;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
 }
