--- a/src/assets/styles/authentication/SignUpForm.scss
+++ b/src/assets/styles/authentication/SignUpForm.scss
@@ -7,7 +7,7 @@
     width: 50%;
     .header-text {
         font-family: 'Poppins';
-        font-size: 46px;
+        font-size: 56px;
         color: #0085FF;
     }
     .FormContainer {
@@ -21,11 +21,15 @@
             width: 100%;
         }
         .user-names {
-            box-sizing: border-box;
+            // box-sizing: border-box;
             width: 100%;
             display: flex;
-            //gap: 10px;
+            gap: 20px;
             justify-content: space-between;
+            //background-color: #0085FF;
+            .name {
+                width: 50%;
+            }
         }
         .email {
             margin-top: 31px;
