refactor: updates from the main repo added

--- a/src/assets/styles/authenticationStyles/TextInput.scss
+++ b/src/assets/styles/authenticationStyles/TextInput.scss
@@ -8,9 +8,10 @@
     flex-direction: column;
     justify-content: center;
     padding: 0px 0px 0px 18px;
+    border: 1px solid transparent;
     label{
         position: relative;
-        top: 14px;
+        top: 20px;
         font-family: 'Poppins';
         font-weight: 300;
         color: #AAAAAA;
