--- a/src/assets/styles/authenticationStyles/Password.scss
+++ b/src/assets/styles/authenticationStyles/Password.scss
@@ -1,6 +1,16 @@
 .password-form {
     //width: 70px;
-    background-color: blue;
+    //background-color: blue;
     height: 70px;
     border: 1px solid transparent;
-}
+    span {
+      background-color: #aaaaaa;
+      padding: 5px;
+      border-radius: 5px;
+      position: absolute;
+      right: 5px;
+      top: 50%;
+      transform: translateY(-50%);
+    }
+  }
+  
