--- a/src/assets/styles/authenticationStyles/TextInput.scss
+++ b/src/assets/styles/authenticationStyles/TextInput.scss
@@ -9,6 +9,7 @@
     justify-content: center;
     padding: 0px 0px 0px 18px;
     border: 1px solid transparent;
+    position: relative;
     label{
         position: relative;
         top: 10px;
@@ -31,8 +32,8 @@
     }
     .icon-container {
         position: absolute;
-        transform: translateX(380px);
-        //left: 50px;
+        right: 0;
+        transform: translateX(calc(100% - 40px));
         cursor: pointer;
         color: #aaaaaa;
         padding: 5px;
