--- a/src/assets/styles/authenticationStyles/PasswordInfo.scss
+++ b/src/assets/styles/authenticationStyles/PasswordInfo.scss
@@ -1,8 +1,8 @@
 .icon {
-    position: absolute;
-    top: 45%;
-    right: 0%;
-    transform: translateX(calc(100% - 148px));
+    position: relative;
+    top: 20px;
+    right: -45.3%;
+    //transform: translateX(calc(100% + 210px));
 }
 .custom-tooltip {
     display: flex;
