--- a/src/assets/styles/authenticationStyles/Login.scss
+++ b/src/assets/styles/authenticationStyles/Login.scss
@@ -11,12 +11,18 @@
         color: #0085FF;
     }
     .login-form-container {
-        width: 50%;
+        width: 60%;
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        
+        #login-error {
+            font-family: 'Roboto';
+            font-size: 16px;    
+            color: #FF3131;
+            position: relative;
+            top: -15px;
+        }
         .login-form {
             width: 65%;
             display: flex;
