--- a/src/assets/styles/authenticationStyles/AuthHero.scss
+++ b/src/assets/styles/authenticationStyles/AuthHero.scss
@@ -3,10 +3,10 @@
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    width: 40%;
+    width: 45%;
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: center;
+    //background-position: center;
     color: #FFFFFF;
     font-family: 'Poppins';
     h1 {
