Added signup auth notifications

--- a/src/assets/styles/authenticationStyles/AuthHeaderText.scss
+++ b/src/assets/styles/authenticationStyles/AuthHeaderText.scss
@@ -4,7 +4,7 @@
     width: 30%;
     margin-left: 2rem;
     font-size: 18px;
-    font-family: roboto;
+    font-family: 'Roboto';
     font-weight: 600;
     color: #0085ff;
 }
