--- a/src/assets/styles/authenticationStyles/SuccessfulNotification.scss
+++ b/src/assets/styles/authenticationStyles/SuccessfulNotification.scss
@@ -10,7 +10,7 @@
     height: 10rem;
     .auth-login-header{
         margin: 0;
-        font-family: roboto;
+        font-family: 'Poppins';
         font-size: 43px;
         letter-spacing: 2px;
         font-weight: 600;
@@ -18,7 +18,7 @@
     }
     .auth-login-text{
         margin: 0;
-        font-family: roboto;
+        font-family: 'Roboto';
         font-size: 18px;
     }
     .auth-login-button{
