--- a/src/assets/styles/authenticationStyles/AuthNotification.scss
+++ b/src/assets/styles/authenticationStyles/AuthNotification.scss
@@ -9,16 +9,17 @@
     width: 30rem;
     height: 10rem;
     .note-header{
+        font-family: 'Poppins';
         margin: 0;
-        font-family: 'Roboto';
-        font-size: 40px;
+        font-size: 56px;
         letter-spacing: 2px;
         font-weight: 600;
         color: #0085FF;
     }
     .note-text{
         margin: 0;
-        font-family: roboto;
+        font-family: 'Roboto';
+        font-size: 20px;
     }
     .note-login-button{
         width: 11rem;
