--- a/src/index.scss
+++ b/src/index.scss
@@ -20,9 +20,12 @@ a:hover {
 }
 
 body {
-  margin: 0;
+  margin: 0%;
+  padding: 0%;
   display: flex;
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  background-color: #f6f6f6;
+
 }
