--- a/src/assets/styles/authenticationStyles/ResetPw.scss
+++ b/src/assets/styles/authenticationStyles/ResetPw.scss
@@ -26,6 +26,14 @@
             color: #222222;
             margin-top: -14px;
         }
+        #pw-error {
+            font-family: 'Roboto';
+            font-size: 16px;    
+            color: #FF3131;
+            position: relative;
+            top: -15px;
+            display: none;
+        }
         .emailForm, .passwordForm {
             width: 100%;
             display: flex;
