--- a/src/assets/styles/authenticationStyles/SignUpForm.scss
+++ b/src/assets/styles/authenticationStyles/SignUpForm.scss
@@ -20,12 +20,13 @@
         font-size: 56px;
         color: #0085FF;
     }
-    #signup-error {
+    #error-div {
         font-family: 'Roboto';
         font-size: 16px;    
         color: #FF3131;
         position: relative;
         top: -15px;
+        display: none;
     }
     .FormContainer {
         width: 65%;
