editted landing page and auth hero styles

--- a/src/assets/styles/authenticationStyles/AuthHero.scss
+++ b/src/assets/styles/authenticationStyles/AuthHero.scss
@@ -22,7 +22,7 @@
     }
     h1 {
         position: absolute;
-        top: 0%;
+        top: -40px;
         //left: 35px;
         @include media ('<=1024px'){
             font-size: 32px;
