--- a/src/assets/styles/TopBar.scss
+++ b/src/assets/styles/TopBar.scss
@@ -4,27 +4,37 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    background-color: #FFFFFF;
+
 }
 .login-register-buttons{
     margin: 2rem;
     display: flex;
     justify-content: space-between;
+    align-items: center;
     background-color: #FFFFFF;
-    width: 13rem;
+    width: 15rem;
     height: 2rem;
 }
 .login-button{
     background-color: transparent;
     border: none;
     cursor: pointer;
+    font-family: 'Poppins';
+    font-size: 16px;
+    color: #222222;
 }
 .register-button{
-    width: 8rem;
+    width: 9.5rem;
     cursor: pointer;
     background-color: #0085ff;
     color: #ffffff;
     border: none;
-    border-radius: 3px;
+    border-radius: 4px;
+    height: 40px;
+    font-family: 'Poppins';
+    font-weight: 600;
+    font-size: 16px;
 }
 .harmburger-menu{
     position: relative;
