--- a/src/assets/styles/authenticationStyles/ResetPw.scss
+++ b/src/assets/styles/authenticationStyles/ResetPw.scss
@@ -26,7 +26,7 @@
             color: #222222;
             margin-top: -14px;
         }
-        #pw-error {
+        #pw-error, #email-error {
             font-family: 'Roboto';
             font-size: 16px;    
             color: #FF3131;
