--- a/src/assets/styles/authenticationStyles/SuccessfulReset.scss
+++ b/src/assets/styles/authenticationStyles/SuccessfulReset.scss
@@ -1,4 +1,4 @@
-.password-reset{
+.password-reset-success{
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -7,15 +7,36 @@
     margin: 6rem auto;
     width: 30rem;
     height: 10rem;
-    .password-reset-header{
+    .success-header{
         margin: 0;
-        font-family: roboto;
-        font-size: 30px;
+        font-family: 'Poppins';
+        font-size: 56px;
         font-weight: 600;
         color: #0085FF;
     }
-    .password-reset-text{
+    .success-text{
         margin: 0;
+        font-family: 'Roboto';
+        font-size: 20px;
+        color: #222222;
+    }
+    .button {
+        width: 229px;
+        .login-button {
+            width: 100%;
+            height: 46px;
+            border: none;
+            background: #0085FF;
+            border-radius: 8px;
+            color: #FFFFFF;
+            cursor: pointer;
+            font-family: 'Poppins';
+            font-size: 16px;
+            font-weight: 600;
+            &:hover{
+                background: #59AFFF;
+            }
+        }
     }
 }
 
