style: added dividers between category list on the landing page

--- a/src/assets/styles/LandingPage.scss
+++ b/src/assets/styles/LandingPage.scss
@@ -320,6 +320,7 @@ p{
         height: 6rem;
         text-align: center;
     }
+    
     .categories-section{
         padding-top: 1rem;
         gap: 0;
@@ -351,6 +352,15 @@ p{
     .getStarted-img{
         left: 2rem;
     }
+    #category1::after{
+        content: '';
+        width: 10rem;
+        height: 4rem;
+        position: absolute;
+        border-bottom: 1px solid #AAAAAA;
+        top: 89rem;
+        left: 26.6rem;
+    }
 }
 @media screen and (max-width: 1920px){
     .team-section > .header{
@@ -362,10 +372,83 @@ p{
         margin: 0;
         justify-content: center;
     }
+
+    #category1::after{
+        content: '';
+        width: 10rem;
+        height: 4rem;
+        position: absolute;
+        border-bottom: 1px solid #AAAAAA;
+        top: 89rem;
+        left: 26.6rem;
+    }
+    #category2::after{
+        content: '';
+        width: 10rem;
+        height: 4rem;
+        position: absolute;
+        border-bottom: 1px solid #AAAAAA;
+        top: 94.5rem;
+        left: 26.6rem;
+    }
+    #category3::after{
+        content: '';
+        width: 10rem;
+        height: 4rem;
+        position: absolute;
+        border-bottom: 1px solid #AAAAAA;
+        top: 99.5rem;
+        left: 26.6rem;
+    }
+    #category4::after{
+        content: '';
+        width: 10rem;
+        height: 4rem;
+        position: absolute;
+        border-bottom: 1px solid #AAAAAA;
+        top: 105.5rem;
+        left: 26.6rem;
+    }
 }
 @media screen and (max-width: 1440px){
     .team-section > .header{
         padding-left: 8vw;
         
+    }
+    #category1::after{
+        content: '';
+        width: 10rem;
+        height: 4rem;
+        position: absolute;
+        border-bottom: 1px solid #AAAAAA;
+        top: 89rem;
+        left: 17rem;
+    }
+    #category2::after{
+        content: '';
+        width: 10rem;
+        height: 4rem;
+        position: absolute;
+        border-bottom: 1px solid #AAAAAA;
+        top: 94.5rem;
+        left: 17rem;
+    }
+    #category3::after{
+        content: '';
+        width: 10rem;
+        height: 4rem;
+        position: absolute;
+        border-bottom: 1px solid #AAAAAA;
+        top: 99.5rem;
+        left: 17rem;
+    }
+    #category4::after{
+        content: '';
+        width: 10rem;
+        height: 4rem;
+        position: absolute;
+        border-bottom: 1px solid #AAAAAA;
+        top: 105.5rem;
+        left: 17rem;
     }
 }
