Integrated the dashboard page

--- a/src/assets/styles/authenticationStyles/PasswordResetNotification.scss
+++ b/src/assets/styles/authenticationStyles/PasswordResetNotification.scss
@@ -9,7 +9,7 @@
     height: 10rem;
     .password-reset-header{
         margin: 0;
-        font-family: roboto;
+        font-family: 'Roboto';
         font-size: 30px;
         font-weight: 600;
         color: #0085FF;
