--- a/src/assets/styles/dashboardStyles/DashboardPage.scss
+++ b/src/assets/styles/dashboardStyles/DashboardPage.scss
@@ -40,7 +40,7 @@
 }
 .block-view > p{
     font-size: 25px;
-    font-family: roboto;
+    font-family: 'Roboto';
     color: #00284C;
     margin-top: 0.6rem;
 }
@@ -56,7 +56,7 @@
     font-weight: 400;
     height: 2rem;
     margin: 0;
-    font-family: roboto;
+    font-family: 'Roboto';
     color: black;
     margin-left: 2rem;
 }
