--- a/src/assets/styles/dashboardStyles/DashboardSideBar.scss
+++ b/src/assets/styles/dashboardStyles/DashboardSideBar.scss
@@ -30,7 +30,7 @@
     align-items: center;
     font-weight: 300;
     gap: 1rem;
-    font-family: roboto;
+    font-family: 'Roboto';
     color: #FFFFFF;
     border: none;
     width: 100%;
