--- a/src/assets/styles/authenticationStyles/AuthHero.scss
+++ b/src/assets/styles/authenticationStyles/AuthHero.scss
@@ -21,6 +21,7 @@
         width: 0%;
     }
     h1 {
+        color: #FFFFFF;
         position: absolute;
         top: -40px;
         //left: 35px;
