--- a/src/assets/styles/dashboardStyles/MerchantProfile.scss
+++ b/src/assets/styles/dashboardStyles/MerchantProfile.scss
@@ -29,7 +29,7 @@
     gap: 0.4rem;
     border: none;
     font-size: 14px;
-    font-family: roboto;
+    font-family: 'Roboto';
     min-width: inherit;
     height: inherit;
     width: inherit;
@@ -67,7 +67,7 @@
     height: 100%;
     border: none;
     font-size: 15px;
-    font-family: roboto;
+    font-family: 'Roboto';
     cursor: pointer;
     background-color: transparent;
     box-shadow: 0px 2px 10px -2px rgba(0, 0, 0, 0.25);
