--- a/src/assets/styles/dashboardStyles/ProfilePage.scss
+++ b/src/assets/styles/dashboardStyles/ProfilePage.scss
@@ -22,7 +22,7 @@
 .name{
     font-weight: 500;
     font-size: 30px;
-    font-family: roboto;
+    font-family: 'Roboto';
     color: #00284C;
 }
 .form{
@@ -41,12 +41,12 @@ input[type="file"]{
     height: 13rem;
 }
 
-input[type="text"]{
-    box-shadow: 0px 2px 10px -2px rgba(0, 0, 0, 0.25);
-    font-size: 13px;
-    padding: 0 0 0 1rem;
-    border: none;
-}
+// input[type="text"]{
+//     box-shadow: 0px 2px 10px -2px rgba(0, 0, 0, 0.25);
+//     font-size: 13px;
+//     padding: 0 0 0 1rem;
+//     border: none;
+// }
 input[type="text"]:focus{
     outline: none;
 }
