style: changed height of team section on landing page in mobile view

--- a/src/assets/styles/LandingPage.scss
+++ b/src/assets/styles/LandingPage.scss
@@ -295,7 +295,8 @@ p{
         display: none;
     }
     .team-section{
-        height: 105rem;
+        justify-content: center;
+        height: 120rem;
         width: 100%;
     }
     .team-section > .header{
@@ -320,7 +321,7 @@ p{
         height: 6rem;
         text-align: center;
     }
-    
+   
     .categories-section{
         padding-top: 1rem;
         gap: 0;
