--- a/src/assets/styles/dashboardStyles/ProfilePage.scss
+++ b/src/assets/styles/dashboardStyles/ProfilePage.scss
@@ -33,8 +33,24 @@
     gap: 1.4rem;
     flex-direction: column;
 }
-.form > input {
-    height: 2.4rem;
+
+.form-div {
+    height: 50px;
+    width: 30rem;
+    position: relative;
+}
+
+.form > .form-div > input {
+    height: 50px;
+    width: 30rem;
+    padding: 0 16px;
+    font-family: 'Roboto';
+    font-size: 16px;
+    color: #222;
+    line-height: 19px;
+    box-shadow: 0px 2px 10px -2px rgba(0,0,0,0.25);
+    outline: none;
+    border: none;
 }
 input[type="file"]{
     width: 13rem;
@@ -70,24 +86,12 @@ input[type="text"]:focus{
     height: 1.5rem;
     cursor: pointer;
 }
-.email-edit-button{
+.email-edit-button,
+.contact-edit-button,
+.location-edit-button {
     position: absolute;
-    top: 0.5rem;
-    left: 27rem;
-    background-color: transparent;
-    border: none;
-}
-.contact-edit-button{
-    position: absolute;
-    top: 4.3rem;
-    left: 27rem;
-    background-color: transparent;
-    border: none;
-}
-.location-edit-button{
-    position: absolute;
-    top: 8rem;
-    left: 27rem;
+    top: 12px;
+    right: -15px;
     background-color: transparent;
     border: none;
 }
