--- a/src/assets/styles/dashboardStyles/ProfilePage.scss
+++ b/src/assets/styles/dashboardStyles/ProfilePage.scss
@@ -30,7 +30,7 @@
     width: 30rem;
     height: 18rem;
     display: flex;
-    gap: 1.4rem;
+    gap: 30px;
     flex-direction: column;
 }
 
@@ -74,6 +74,8 @@ input[type="text"]:focus{
     border: none;
     width: 7rem;
     height: 2.3rem;
+    position: relative;
+    right: -30px;
 }
 .button-span{
     width: 100%;
