--- a/src/assets/styles/authenticationStyles/SignUpForm.scss
+++ b/src/assets/styles/authenticationStyles/SignUpForm.scss
@@ -20,6 +20,10 @@
         font-size: 56px;
         color: #0085FF;
     }
+    .sm-buttons {
+        display: flex;
+        gap: 50px;
+    }
     #error-div {
         font-family: 'Roboto';
         font-size: 16px;    
