style: changed spacing at template preview

--- a/src/assets/styles/templatesStyles/TemplatesPreview.scss
+++ b/src/assets/styles/templatesStyles/TemplatesPreview.scss
@@ -1,5 +1,6 @@
 .template-preview-container{
     display: flex;
+    margin-top: 5rem;
     padding: 0 3rem 0 3rem;
     justify-content: flex-start;
     gap: 5rem;
