style: modified styles

--- a/src/assets/styles/templatesStyles/Ecommerce/Carousel.scss
+++ b/src/assets/styles/templatesStyles/Ecommerce/Carousel.scss
@@ -13,11 +13,12 @@
         width: 100%;
         .alice-carousel__wrapper {
             width: 100%;
-            .alice-carousel__stage {
-                .alice-carousel__stage-item {
-                    margin-right: 5px; // Adjust the margin value to decrease the gap
-                }
-            }
+            // .alice-carousel__stage {
+            //     .alice-carousel__stage-item {
+            //         //margin-right: 5px; // Adjust the margin value to decrease the gap
+                    
+            //     }
+            // }
             
         }
     }
