--- a/src/assets/styles/templatesStyles/Ecommerce/Hero.scss
+++ b/src/assets/styles/templatesStyles/Ecommerce/Hero.scss
@@ -22,10 +22,10 @@
     }
     .subscribe {
         box-sizing: border-box;
-        width: 451px;
+        width: 30%;
         height: 46px;
         position: relative;
-        right: -400px;
+        right: -30%;
         bottom: -40px;
         font-family: 'Roboto';
         display: flex;
