--- a/src/assets/styles/templatesStyles/Ecommerce/Navbar.scss
+++ b/src/assets/styles/templatesStyles/Ecommerce/Navbar.scss
@@ -7,10 +7,10 @@
     top: 0px;
     background: #15616B;
     display: flex;
-    //justify-content: center;
+    justify-content: center;
     align-items: center;
-    padding: 0% 60px;
-    gap: 75px;
+    padding: 0% 5%;
+    gap: 5%;
     font-family: 'Roboto';
     .logo {
         font-family: inherit;
