--- a/src/assets/styles/templatesStyles/Ecommerce/Header.scss
+++ b/src/assets/styles/templatesStyles/Ecommerce/Header.scss
@@ -5,10 +5,11 @@
     justify-content: center;
     align-items: center;
     .menu {
+        width: 80%;
         display: flex;
         justify-content: center;
         align-items: center;
-        gap: 96px;
+        gap: 10%;
         .menu-item {
             list-style-type: none;
             font-size: 20px;
