--- a/src/assets/styles/templatesStyles/Ecommerce/Main.scss
+++ b/src/assets/styles/templatesStyles/Ecommerce/Main.scss
@@ -2,14 +2,15 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100%;
+    width: 90%;
     height: auto;
+    margin: 0 auto;
     .main-content {
         display: flex;
         justify-content: center;
         align-items: center;
         flex-direction: column;
-        width: inherit;
+        width: 100%;
         height: inherit;
         .content-header {
             font-family: 'Poppins';
@@ -17,17 +18,18 @@
             font-size: 40px;
             color: #222222;
         }
-        .sub-section {
+        .section {
             display: flex;
             justify-content: space-between;
-            width: 93%;
+            width: 100%;
             margin: 0 auto;
         }
-        .women-section {
+        .section-items {
+            width: 100%;
             display: flex;
-            justify-content: center;
+            justify-content: space-between;
             align-items: center;
-            gap: 24px;
+            //gap: 5%;
             .tile {
                 width: 300px;
                 height: 480px;
