--- a/src/assets/styles/templatesStyles/Ecommerce/Main.scss
+++ b/src/assets/styles/templatesStyles/Ecommerce/Main.scss
@@ -21,8 +21,20 @@
         .section {
             display: flex;
             justify-content: space-between;
+            align-items: flex-end;
             width: 100%;
             margin: 0 auto;
+            color: #222222;
+            .section-name {
+                font-family: 'Poppins';
+                font-weight: 700;
+                font-size: 40px;
+            }
+            .more {
+                font-family: 'Roboto';
+                font-weight: 500;
+                font-size: 24px;
+            }
         }
         .section-items {
             width: 100%;
