--- a/src/assets/styles/templatesStyles/Ecommerce/Main.scss
+++ b/src/assets/styles/templatesStyles/Ecommerce/Main.scss
@@ -66,6 +66,9 @@
                     .number-available {
                         font-size: 16px;
                         color: #222222;
+                        margin: 0%;
+                        position: relative;
+                        top: -15%;
                     }
                 }
             }
