--- a/src/assets/styles/templatesStyles/Ecommerce/Footer.scss
+++ b/src/assets/styles/templatesStyles/Ecommerce/Footer.scss
@@ -2,10 +2,11 @@
     width: 100%;
     height: 220px;
     position: relative;
+    //top: 100%;
     bottom: 0%;
     background: #222222;
     color: #FFFFFF;
-    margin-top: 5%;
+    margin-top: calc(100% - 85%);
     font-family: 'Roboto';
     display: flex;
     justify-content: center;
