style: fixed the ecommerce cart footer margin issue

--- a/src/assets/styles/templatesStyles/Ecommerce/Footer.scss
+++ b/src/assets/styles/templatesStyles/Ecommerce/Footer.scss
@@ -6,7 +6,7 @@
     bottom: 0%;
     background: #222222;
     color: #FFFFFF;
-    margin-top: calc(100% - 85%);
+    margin-top: calc(0.11 * (100% - 220px));
     font-family: 'Roboto';
     display: flex;
     justify-content: center;
