style: made changes to landing page main div using flex

--- a/src/assets/styles/LandingPage.scss
+++ b/src/assets/styles/LandingPage.scss
@@ -1,6 +1,11 @@
 body{
     font-family: 'roboto','poppins' sans-serif;
 }
+.main-container{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
 .getStarted-section{
     width: 100%;
     height: 30rem;
