--- a/src/assets/styles/templatesStyles/Finance/Finance.scss
+++ b/src/assets/styles/templatesStyles/Finance/Finance.scss
@@ -8,105 +8,105 @@
         justify-content: space-around;
         gap: 35vw;
         width: 100%;
-        height: 5rem; 
-    }
-    .finance-top-bar-header{
-        font-size: 35px;
-        font-family: roboto;
-        color: #FC7225;
-    }
-
-    .search-bar-buttons-span{
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        height: 3.5rem;
-        width: 45vw;
+        height: 5rem;
+        .finance-top-bar-header{
+            font-size: 35px;
+            font-family: roboto;
+            color: #FC7225;
+        } 
+        .search-bar-buttons-span{
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            height: 3.5rem;
+            width: 45vw;
+            .login-register-buttons{
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                gap: 0.4rem;
+                width: 12vw;
+                height: 100%;
+            }
+            .search-bar-search-icon{
+                display: flex;
+                justify-content: center;
+                padding: 0;
+                gap: 0.5rem;
+                height: 2.8rem;
+                width: 26rem;
+                border-radius: 10px;
+                box-shadow: 0px 2px 8px -2px rgba(0, 0, 0, 0.25);
+                &:focus{
+                    outline: none;
+                }
+                .search-bar{
+                    height: 1.6rem;
+                    top: 0.6rem;
+                    position: relative;
+                    width: 22rem;
+                    border: none;
+                    margin: 0;
+                    color: black;
+                    border-radius: 0px;
+                    border-right: 1px solid #525252;
+                
+                }
+                .searchlogo-img{
+                    width: 1.5rem;
+                    height: 1.5rem;
+                    position: relative;
+                    left: 0.2rem;
+                    top: 0.7rem;
+                }
+            }
+        }
         .login-register-buttons{
             display: flex;
-            align-items: center;
-            justify-content: center;
-            gap: 0.4rem;
-            width: 12vw;
             height: 100%;
-        }
-        .search-bar-search-icon{
-            display: flex;
-            justify-content: center;
-            padding: 0;
-            gap: 0.5rem;
-            height: 2.8rem;
-            width: 26rem;
-            border-radius: 10px;
-            box-shadow: 0px 2px 8px -2px rgba(0, 0, 0, 0.25);
-            &:focus{
-                outline: none;
-            }
-            .search-bar{
-                height: 1.6rem;
-                top: 0.6rem;
-                position: relative;
-                width: 22rem;
+            justify-content: space-between;
+            gap: 5rem;
+            button{
+                background-color: transparent;
                 border: none;
-                margin: 0;
-                color: black;
-                border-radius: 0px;
-                border-right: 1px solid #525252;
-            
+                cursor: pointer;
+                font-size: 18px;
+                font-family: roboto;
+                font-weight: 400;
             }
-            .searchlogo-img{
-                width: 1.5rem;
-                height: 1.5rem;
+            .login-button{
+                color: #222222;
                 position: relative;
-                left: 0.2rem;
-                top: 0.7rem;
+                width: 5rem;
+                height: 2rem;
+                text-align: right;
+                margin: 0;
+            }
+            &::after{
+                content: '';
+                margin-left: 5px;
+                position: absolute;
+                top: 50%;
+                left: 84%;
+                border-bottom: 2px solid #222222;
+                rotate: 90deg;
+                width: 1rem;
+            }
+            .register-button{
+                color: #FC7225;
+                width: 6rem;
+                height: 2rem;
+                padding: 0;
+                text-align: left;
+                margin: 0;
             }
         }
     }
-    .login-register-buttons{
-        display: flex;
-        height: 100%;
-        justify-content: space-between;
-        gap: 5rem;
-        button{
-            background-color: transparent;
-            border: none;
-            cursor: pointer;
-            font-size: 18px;
-            font-family: roboto;
-            font-weight: 400;
-        }
-        .login-button{
-            color: #222222;
-            position: relative;
-            width: 5rem;
-            height: 2rem;
-            text-align: right;
-            margin: 0;
-        }
-        &::after{
-            content: '';
-            margin-left: 5px;
-            position: absolute;
-            top: 50%;
-            left: 84%;
-            border-bottom: 2px solid #222222;
-            rotate: 90deg;
-            width: 1rem;
-        }
-        .register-button{
-            color: #FC7225;
-            width: 6rem;
-            height: 2rem;
-            padding: 0;
-            text-align: left;
-            margin: 0;
-        }
-    }
+    
     .finance-hero-section {
         position: relative;
         display: flex;
-        background: linear-gradient(0deg, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('../images/farmers.png'), #767676;
+        background: linear-gradient(0deg, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('../../../images/farmers.png'), #767676;
         justify-content: center;
         background-size: cover;
         background-repeat: no-repeat;
@@ -130,41 +130,42 @@
             color: #FFFFFF;
         }
         
-        .toggle-div{
-            width: 100%;
-            display: flex;
-            align-items: center;
-            height: 13rem;
-            background-color: #FC7225;
+        
+    }
+    .toggle-div{
+        width: 100%;
+        display: flex;
+        align-items: center;
+        height: 13rem;
+        background-color: #FC7225;
+    }
+    .toggle-div-personal-mode{
+        justify-content: center;
+        gap: 9.5rem;
+    }
+    .toggle-div-business-mode{
+        justify-content: space-evenly;
+    }
+    .toggle-div-component{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 10rem;
+        height: 10rem;
+        border-radius: 50%;
+        font-size: 15px;
+        font-weight: 500;
+        font-family: 'roboto';
+        background-color: #FFFFFF;
+        box-shadow: 0px 2px 8px -2px rgba(0, 0, 0, 0.25);
+        .text{
+            max-width: 7.5rem;
+            text-align: center;
         }
-        .toggle-div-personal-mode{
-            justify-content: center;
-            gap: 9.5rem;
-        }
-        .toggle-div-business-mode{
-            justify-content: space-evenly;
-        }
-        .toggle-div-component{
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            width: 10rem;
-            height: 10rem;
-            border-radius: 50%;
-            font-size: 15px;
-            font-weight: 500;
-            font-family: 'roboto';
-            background-color: #FFFFFF;
-            box-shadow: 0px 2px 8px -2px rgba(0, 0, 0, 0.25);
-            .text{
-                max-width: 7.5rem;
-                text-align: center;
-            }
-            .image{
-                width: 2.7rem;
-                height: 2.7rem;
-            }
+        .image{
+            width: 2.7rem;
+            height: 2.7rem;
         }
     }
     .toggle-buttons-span{
@@ -197,7 +198,7 @@
             background-color: #FC7225;
             color: #FFFFFF;
         }
-    }
+}
     .section3{
         width: 100%;
         height: 28rem;
@@ -214,28 +215,26 @@
                 height: 85%;
                 width: 30rem;
                 border-radius: 10px;
-            }
-        }
-        .header-text-span{
-            width: 31rem;
-            height: 15rem;
-            h3{
-                font-size: 40px;
-                margin: 0;
-                font-family: 'poppins';
-            }
-            p{
-                margin: 0;
-                font-family: 'roboto';
-                font-weight: 400;
-            }
-            .image-span{
                 .image{
                     width: 100%;
                     height: 100%;
                     object-fit: cover;
                     border-radius: inherit;
                     
+                }
+            }
+            .header-text-span{
+                width: 31rem;
+                height: 15rem;
+                h3{
+                    font-size: 40px;
+                    margin: 0;
+                    font-family: 'poppins';
+                }
+                p{
+                    margin: 0;
+                    font-family: 'roboto';
+                    font-weight: 400;
                 }
             }
         }
@@ -258,24 +257,45 @@
                 height: 85%;
                 width: 30rem;
                 border-radius: 10px;
-            }
-        }
-        .message-section{
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            gap: 10rem;
-            width: 100%;
-            height: 35rem;
-            background: linear-gradient(0deg, rgba(221, 79, 0, 0.10), rgba(221, 79, 0, 0.10)), url('../images/Rectangle.png'), #D9D9D9;
-            .image-span{
-                height: 26rem;
-                width: 30rem;
-                border-radius: 10px;
-                img{
+                .image{
                     width: 100%;
                     height: 100%;
+                    object-fit: cover;
+                    border-radius: inherit;
+                    
                 }
+            }
+            .header-text-span{
+                width: 31rem;
+                height: 15rem;
+                h3{
+                    font-size: 40px;
+                    margin: 0;
+                    font-family: 'poppins';
+                }
+                p{
+                    margin: 0;
+                    font-family: 'roboto';
+                    font-weight: 400;
+                }
+            }
+        }
+    }
+    .message-section{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 10rem;
+        width: 100%;
+        height: 35rem;
+        background: linear-gradient(0deg, rgba(221, 79, 0, 0.10), rgba(221, 79, 0, 0.10)), url('../../../images//Rectangle.png'), #D9D9D9;
+        .image-span{
+            height: 26rem;
+            width: 30rem;
+            border-radius: 10px;
+            img{
+                width: 100%;
+                height: 100%;
             }
         }
     }
