--- a/src/assets/styles/templatesStyles/Ecommerce/CustomizationModal.scss
+++ b/src/assets/styles/templatesStyles/Ecommerce/CustomizationModal.scss
@@ -14,6 +14,12 @@
     background-color: #fff;
     padding: 20px;
     border-radius: 4px;
+    width: 30%;
+    height: 70%;
+    opacity: 0.9;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
   
 .close-button {
