--- a/src/assets/styles/templatesStyles/Ecommerce/TemplateCustomizationForm.scss
+++ b/src/assets/styles/templatesStyles/Ecommerce/TemplateCustomizationForm.scss
@@ -1,42 +1,58 @@
 // templateCustomizationForm.scss
+.template-customization {
+    width: 100%;
+    height: 70%;
+    position: relative;
+    //top: -10%;
+    //opacity: 0.1;
+    //background-color: #0056b3;
+    display: flex;
 
-.sidebar {
-    width: 250px;
-    background-color: #f2f2f2;
-    padding: 20px;
-  }
-  
-  .form {
-    margin-left: 270px;
-    padding: 20px;
-  }
-  
-  .label {
-    font-weight: bold;
-    margin-bottom: 5px;
-  }
-  
-  .input {
-    width: 100%;
-    padding: 8px;
-    margin-bottom: 10px;
-  }
-  
-  .select {
-    width: 100%;
-    padding: 8px;
-    margin-bottom: 10px;
-  }
-  
-  .button {
-    background-color: #007bff;
-    color: #ffffff;
-    padding: 10px;
-    border: none;
-    cursor: pointer;
-  }
-  
-  .button:hover {
-    background-color: #0056b3;
-  }
+    .sidebar {
+        width: 30%;
+        height: 100%;
+        background-color: #f2f2f2;
+        padding: 20px;
+      }
+      
+      .form {
+        //margin-left: 270px;
+        width: 70%;
+        height: 100%;
+        padding: 20px;
+        //background-color: #0056b3;
+        display: flex;
+        box-sizing: border-box;
+      }
+      
+      .label {
+        font-weight: bold;
+        //margin-bottom: 5px;
+      }
+      
+      .input {
+        width: 80%;
+        padding: 8px;
+        //margin-bottom: 10px;
+      }
+      
+      .select {
+        width: 70%;
+        padding: 8px;
+        //margin-bottom: 10px;
+      }
+      
+      .button {
+        background-color: #007bff;
+        color: #ffffff;
+        padding: 10px;
+        border: none;
+        cursor: pointer;
+      }
+      
+      .button:hover {
+        background-color: #0056b3;
+      }
+}
+
   
