feat: successfully edit template

--- a/src/assets/styles/templatesStyles/Ecommerce/Header.scss
+++ b/src/assets/styles/templatesStyles/Ecommerce/Header.scss
@@ -13,8 +13,8 @@
         .menu-item {
             list-style-type: none;
             font-size: 20px;
-            font-family: 'Roboto';
-            color: #15616B;
+            font-family: var(--body-font);
+            color: var(--primary-color);
         }
     }
 }
