--- a/src/assets/styles/templatesStyles/Ecommerce/AddToCart.scss
+++ b/src/assets/styles/templatesStyles/Ecommerce/AddToCart.scss
@@ -1,12 +1,12 @@
 .add-to-cart {
     width: 206px;
     height: 40px;
-    background: #15616B;
-    color: #FFFFFF;
+    background: var(--primary-color);
+    color: var(--secondary-color);
     border-radius: 10px;
     outline: none;
     border: none;
     font-weight: 600;
     font-size: 20px;
-    font-family: 'Roboto';
+    font-family: var(--body-font);
 }
