--- a/src/assets/styles/templatesStyles/TemplatesPreview.scss
+++ b/src/assets/styles/templatesStyles/TemplatesPreview.scss
@@ -5,7 +5,7 @@
     justify-content: flex-start;
     gap: 5rem;
     align-items: center;
-    width: 100%;
+    width: 80vw;
     height: 30vh;
 }
 
