--- a/src/assets/styles/templatesStyles/Ecommerce/TemplateCustomizationForm.scss
+++ b/src/assets/styles/templatesStyles/Ecommerce/TemplateCustomizationForm.scss
@@ -9,39 +9,40 @@
     display: flex;
 
     .sidebar {
-        width: 30%;
-        height: 100%;
-        background-color: #f2f2f2;
-        padding: 20px;
-      }
-      
+      width: 30%;
+      height: 100%;
+      background-color: #f2f2f2;
+      padding: 20px;
+    }
+    .formDiv {
+      box-sizing: border-box;
+      width: 70%;
       .form {
         //margin-left: 270px;
-        width: 70%;
+        width: 100%;
         height: 100%;
         padding: 20px;
         //background-color: #0056b3;
         display: flex;
-        box-sizing: border-box;
+        
+        overflow: scroll;
+        .label {
+          font-weight: bold;
+          //margin-bottom: 5px;
+        }
+        
+        .input {
+          width: 80%;
+          padding: 8px;
+          //margin-bottom: 10px;
+        }
+        
+        .select {
+          width: 70%;
+          padding: 8px;
+          //margin-bottom: 10px;
+        }
       }
-      
-      .label {
-        font-weight: bold;
-        //margin-bottom: 5px;
-      }
-      
-      .input {
-        width: 80%;
-        padding: 8px;
-        //margin-bottom: 10px;
-      }
-      
-      .select {
-        width: 70%;
-        padding: 8px;
-        //margin-bottom: 10px;
-      }
-      
       .button {
         background-color: #007bff;
         color: #ffffff;
@@ -53,6 +54,8 @@
       .button:hover {
         background-color: #0056b3;
       }
+    }  
+      
 }
 
   
