--- a/src/assets/styles/templatesStyles/Ecommerce/TemplateCustomizationForm.scss
+++ b/src/assets/styles/templatesStyles/Ecommerce/TemplateCustomizationForm.scss
@@ -15,6 +15,24 @@
       height: 100%;
       background-color: #f2f2f2;
       padding: 20px;
+      ul {
+        list-style: none;
+        padding: 0;
+      }
+      
+      li {
+        margin-bottom: 10px;
+        cursor: pointer;
+        transition: color 0.3s ease;
+        &:hover {
+          text-decoration: underline;
+          color: blue;
+        }
+        &:active {
+          color: blue;
+        }
+      }
+      
     }
     .formDiv {
       box-sizing: border-box;
