--- a/src/assets/styles/dashboardStyles/MerchantProfile.scss
+++ b/src/assets/styles/dashboardStyles/MerchantProfile.scss
@@ -34,6 +34,11 @@
     height: inherit;
     width: inherit;
     background-color: #FFFFFF;
+    padding-left: 15px;
+    text-transform: uppercase;
+    font-weight: 700;
+    font-size: 17px;
+    letter-spacing: 0.5px;
 }
 .profile-button::after{
     content: "\25be";
