--- a/src/assets/styles/templatesStyles/Ecommerce/Hero.scss
+++ b/src/assets/styles/templatesStyles/Ecommerce/Hero.scss
@@ -1,7 +1,8 @@
 .hero {
     width: 100%;
     height: 418px;
-    background-image: url('../../../images/Templates/Ecommerce/heroBackground.png');
+    // background-image: url('../../../images/Templates/Ecommerce/heroBackground.png');
+    background-image: url(var(--project-banner));
     display: flex;
     justify-content: center;
     align-items: center;
