--- a/src/assets/styles/templatesStyles/Ecommerce/Navbar.scss
+++ b/src/assets/styles/templatesStyles/Ecommerce/Navbar.scss
@@ -1,6 +1,8 @@
 .navbar {
     box-sizing: border-box;
-    position: relative;
+    position: sticky;
+    top: 0;
+    z-index: 2;
     width: 100%;
     height: 70px;
     left: 0px;
