feat: added an edit button to the modal view

--- a/src/assets/styles/dashboardStyles/TemplatesPage.scss
+++ b/src/assets/styles/dashboardStyles/TemplatesPage.scss
@@ -56,6 +56,8 @@
 }
 .template-header{
     font-size: 27px;
+    width: 40rem;
+    height: 3rem;
     color: #222222;
     margin: 2rem 0 0 2rem;
     font-family: roboto;
