--- a/src/assets/styles/templatesStyles/TemplatesPreview.scss
+++ b/src/assets/styles/templatesStyles/TemplatesPreview.scss
@@ -1,6 +1,6 @@
 .template-preview-container{
     display: flex;
-    margin-top: 5rem;
+    margin-top: 0;
     padding: 0 3rem 0 3rem;
     justify-content: flex-start;
     gap: 5rem;
@@ -42,6 +42,9 @@
 
 
 .template-preview-container{
+    margin: 0;
+    padding-top: 0;
+    padding-left: 1.5rem;
     display: flex;
     flex-direction: row;
 }
@@ -49,4 +52,22 @@
     width: 100%;
     margin: 0;
     height: 100%;
+}
+.edit-template-button{
+    width: 11rem;
+    height: 3rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    cursor: pointer;
+    top: 70vh;
+    left: 72vw;
+    z-index: 100;
+    background-color: #00284C;
+    border-radius: 0;
+    color: #FFFFFF;
+    font-weight: 600;
+    font-size: 20px;
+    font-family: 'poppins';
 }
