--- a/src/assets/styles/dashboardStyles/TemplatesPage.scss
+++ b/src/assets/styles/dashboardStyles/TemplatesPage.scss
@@ -57,8 +57,10 @@
 .template-header{
     font-size: 27px;
     color: #222222;
+    width: 20rem;
+    height: 2.5rem;
     margin: 2rem 0 0 2rem;
-    font-family: roboto;
+    font-family: 'roboto';
 }
 .category-list{
     position: absolute;
