--- a/src/assets/styles/templatesStyles/Ecommerce/ProjectCustomizationForm.scss
+++ b/src/assets/styles/templatesStyles/Ecommerce/ProjectCustomizationForm.scss
@@ -98,5 +98,32 @@
   }
 }
 
+.image-preview-container {
+  // position: relative;
+  // top: -20%;
+  width: 300px;
+  height: 200px;
+  border: 1px solid #ccc;
+  padding: 10px;
+  //margin-top: 10px;
+  //background-color: #0056b3;
+
+  .image-preview {
+    position: relative;
+    top: -20%;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    img {
+      max-width: 100%;
+      max-height: 100%;
+    }
+  }
+}
+
+
 
   
