--- a/src/assets/styles/templatesStyles/Ecommerce/Main.scss
+++ b/src/assets/styles/templatesStyles/Ecommerce/Main.scss
@@ -53,6 +53,10 @@
                 gap: 24px;
                 flex-direction: column;
                 font-family: var(--body-font);
+                // .image {
+                //     width: 250px;
+                //     height: 50%;
+                // }
                 .price {
                     font-weight: 700;
                     font-size: var(--body-font-size);
