--- a/src/assets/styles/dashboardStyles/ProfilePage.scss
+++ b/src/assets/styles/dashboardStyles/ProfilePage.scss
@@ -111,3 +111,9 @@ input[type="text"]:focus{
     background-color: transparent;
     border: none;
 }
+
+button:disabled {
+    opacity: 0.5;
+    outline-offset: 2px;
+    outline: 1px solid #00284C;
+}
