--- a/src/assets/styles/templatesStyles/Ecommerce/ProjectCustomizationForm.scss
+++ b/src/assets/styles/templatesStyles/Ecommerce/ProjectCustomizationForm.scss
@@ -145,32 +145,38 @@
     }  
   }
 }
-
-.image-preview-container {
-  // position: relative;
-  // top: -20%;
-  width: 300px;
-  height: 200px;
-  border: 1px solid #ccc;
-  padding: 10px;
-  //margin-top: 10px;
-  //background-color: #0056b3;
-
-  .image-preview {
-    position: relative;
-    top: -20%;
+.upload-container {
+  display: flex;
+  flex-direction: column;
+  // justify-content: center;
+  // align-items: center;
+  // gap: 20px;
+  width: 90%;
+  height: 300px;
+  .image-preview-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid #ccc;
+    padding: 10px;
     width: 100%;
     height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-    img {
-      max-width: 100%;
-      max-height: 100%;
+    .image-preview {
+      width: 90%;
+      height: 90%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+  
+      img {
+        width: 80%;
+        height: 80%;
+      }
     }
   }
 }
+
 
 @keyframes pulse {
   from {
