--- a/src/assets/styles/dashboardStyles/DashboardSideBar.scss
+++ b/src/assets/styles/dashboardStyles/DashboardSideBar.scss
@@ -3,7 +3,7 @@
     // width: 13vw;
     height: 94vh;
     flex: 1.5;
-    overflow: hidden;
+    // overflow: hidden;
     transition: display 500ms;
 
 }
