--- a/src/assets/styles/templatesStyles/Ecommerce/Main.scss
+++ b/src/assets/styles/templatesStyles/Ecommerce/Main.scss
@@ -39,9 +39,11 @@
         .section-items {
             width: 100%;
             display: flex;
+            flex-wrap: wrap;
             justify-content: space-between;
             align-items: center;
-            //gap: 5%;
+            row-gap: 30px;
+            margin-bottom: 50px;
             .tile {
                 width: 300px;
                 height: 480px;
