--- a/src/assets/styles/templatesStyles/Ecommerce/ProjectCustomizationForm.scss
+++ b/src/assets/styles/templatesStyles/Ecommerce/ProjectCustomizationForm.scss
@@ -77,6 +77,8 @@
         padding: 20px;
         //background-color: #0056b3;
         display: flex;
+        flex-direction: column;
+        gap: 3%;
         overflow-y: scroll;
         .label {
           font-weight: bold;
